Bug 167973 - In Writer, Change Case command (SHFT+F3) cannot provide Sentence Case if we select a bullet/numbered list
Summary: In Writer, Change Case command (SHFT+F3) cannot provide Sentence Case if we s...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:26.2.0 target:25.8.2.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-08-16 04:28 UTC by NarayanAras
Modified: 2025-09-30 11:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NarayanAras 2025-08-16 04:28:49 UTC
Description:
If we have selected numbered or bullet list, Writer cannot change its case to "Sentence case". The SHFT+F3 command cycles through the other cases (ALLCAPS, Each word capitalized, all lowercase).


Steps to Reproduce:
1. Select multiple items in a bullet list or numbered list
2.Press SHFT+F3. Repeat.

Actual Results:
The command applies all cases (ALLCAPS, Each Word Capitalized, all lowercase), EXCEPT the Sentence case.

Expected Results:
Sentence case should be included in the cycle.



Reproducible: Always


User Profile Reset: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: TextDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 raal 2025-09-23 18:34:00 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

Works in 7.3
Comment 2 raal 2025-09-23 18:44:18 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-24.8.
Adding Cc: to Oliver Specht ; Could you possibly take a look at this one?
Thanks
 4f98a4faf6412a2c2558221573a4e10b51c3f933 is the first bad commit
commit 4f98a4faf6412a2c2558221573a4e10b51c3f933
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Mon Apr 15 19:18:29 2024 +0200

    source b1170251fbca5b6b243902cf10695ab4c4c5642b

165986: Improve case rotation in sentence case | https://gerrit.libreoffice.org/c/core/+/165986
Comment 3 Oliver Specht (CIB) 2025-09-25 05:27:13 UTC
To be fixed in https://gerrit.libreoffice.org/c/core/+/191472
Comment 4 Commit Notification 2025-09-25 07:16:37 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bb496f5494a23c247c86fdf5ae65054908df44ce

tdf#167973 Fixes case rotation in selection in multiple paragraphs

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-09-29 10:38:17 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/fd25b527b3c03f20050aad763b8eb18982f018c0

tdf#167973 Fixes case rotation in selection in multiple paragraphs

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-09-29 10:56:25 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/83ec055cba8ae68374ea6c7e657ed15c4cea7e4d

tdf#167973: sw: Add test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-09-29 14:37:54 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/311df9a352f69f821ff5516cc315d9501b5d1b8b

tdf#167973 Fixes case rotation in selection in multiple paragraphs

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-09-29 14:55:21 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-2":

https://git.libreoffice.org/core/commit/4c43f03303ccf634da44690e4c0d3dda2af37fad

tdf#167973 Fixes case rotation in selection in multiple paragraphs

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.