tdf#167973 Fixes case rotation in selection in multiple paragraphs

Broken in commit b1170251fbca5b6b243902cf10695ab4c4c5642b because it checked
the selection in a single paragraph only.

Change-Id: If84aca87c9fee5750751cd91cb08372714f17eba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191472
Tested-by: Jenkins
Reviewed-by: Oliver Specht <oliver.specht@cib.de>